# python-project-lvl1

./: .gitignore  README.md  pyproject.toml
.github/workflows/: hexlet-lint.yml
brain_games/: all.py  engine.py
brain_games/games/: all.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
